--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,5 +6,5 @@ api-version: 1.13
 commands:
   maze:
     description: Generates maze of given size
-    usage: /maze (size)
+    usage: /maze (size) (block)
     permission: bukkit.command.reload
